--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.4.2</version>
-    <relativePath></relativePath>
+    <relativePath />
   </parent>
 
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic</artifactId>
-  <version>4.0.1-SNAPSHOT</version>
+  <version>4.0.0</version>
 
   <name>petclinic</name>
 
@@ -23,7 +23,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- Important for reproducible builds. Update using e.g. ./mvnw versions:set
         -DnewVersion=... -->
-    <project.build.outputTimestamp>2025-03-27T07:16:31Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-03-27T07:23:51Z</project.build.outputTimestamp>
 
     <!-- Web dependencies -->
     <webjars-locator.version>1.0.1</webjars-locator.version>
@@ -44,6 +44,7 @@
     <connection>scm:git:git://github.com/skumargrid/spring-petclinic.git</connection>
     <developerConnection>scm:git:ssh://github.com/skumargrid/spring-petclinic.git</developerConnection>
     <url>https://github.com/skumargrid/spring-petclinic</url>
+    <tag>v4.0.0</tag>
   </scm>
 
 
@@ -421,7 +422,7 @@
                         </goals>
                       </pluginExecutionFilter>
                       <action>
-                        <ignore></ignore>
+                        <ignore />
                       </action>
                     </pluginExecution>
                     <pluginExecution>
@@ -434,7 +435,7 @@
                         </goals>
                       </pluginExecutionFilter>
                       <action>
-                        <ignore></ignore>
+                        <ignore />
                       </action>
                     </pluginExecution>
                     <pluginExecution>
@@ -447,7 +448,7 @@
                         </goals>
                       </pluginExecutionFilter>
                       <action>
-                        <ignore></ignore>
+                        <ignore />
                       </action>
                     </pluginExecution>
                   </pluginExecutions>
