--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,17 @@
   </configuration>
 </plugin>
 
+ <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-release-plugin</artifactId>
+  <version>3.0.1</version>
+  <configuration>
+    <autoVersionSubmodules>true</autoVersionSubmodules>
+    <tagNameFormat>v@{project.version}</tagNameFormat>
+    <pushChanges>false</pushChanges> <!-- Set to true after testing -->
+  </configuration>
+</plugin> 
+
        <plugin>
         <groupId>io.spring.javaformat</groupId>
         <artifactId>spring-javaformat-maven-plugin</artifactId>
