Update pom.xml and release.properties for release process

--- a/release.properties
+++ b/release.properties
@@ -1,20 +1,18 @@
 #release configuration
-#Thu Mar 27 13:01:34 IST 2025
-completedPhase=scm-commit-release
-exec.additionalArguments=-DskipTests
+#Mon Apr 07 14:11:03 IST 2025
+completedPhase=check-poms
+exec.additionalArguments=-Dmaven.test.skip\=true
 exec.pomFileName=pom.xml
 exec.snapshotReleasePluginAllowed=false
 pinExternals=false
 preparationGoals=clean verify
-project.dev.org.springframework.samples\:spring-petclinic=4.0.1-SNAPSHOT
-project.rel.org.springframework.samples\:spring-petclinic=4.0.0
-project.scm.org.springframework.samples\:spring-petclinic.connection=scm\:git\:git\://github.com/skumargrid/spring-petclinic.git
-project.scm.org.springframework.samples\:spring-petclinic.developerConnection=scm\:git\:ssh\://github.com/skumargrid/spring-petclinic.git
+project.scm.org.springframework.samples\:spring-petclinic.connection=scm\:git\:git@github.com\:skumargrid/spring-petclinic.git
+project.scm.org.springframework.samples\:spring-petclinic.developerConnection=scm\:git\:git@github.com\:skumargrid/spring-petclinic.git
 project.scm.org.springframework.samples\:spring-petclinic.tag=v4.0.0
 project.scm.org.springframework.samples\:spring-petclinic.url=https\://github.com/skumargrid/spring-petclinic
 projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
 projectVersionPolicyId=default
-pushChanges=true
+pushChanges=false
 releaseStrategyId=default
 remoteTagging=true
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
@@ -22,6 +20,5 @@ scm.commentPrefix=[maven-release-plugin]
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
 scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
-scm.tag=v4.0.0
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.url=scm\:git\:ssh\://github.com/skumargrid/spring-petclinic.git
+scm.tagNameFormat=v@{project.version}
+scm.url=scm\:git\:git@github.com\:skumargrid/spring-petclinic.git
