--- a/pom.xml
+++ b/pom.xml
@@ -186,20 +186,21 @@
       </plugin>
    
     <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-release-plugin</artifactId>
-      <version>3.0.1</version>
-      <configuration>
-        <tagNameFormat>v@{project.version}</tagNameFormat>
-        <pushChanges>true</pushChanges>
-        <localCheckout>true</localCheckout>
-        <!-- Force SSH for all operations -->
-        <providerImplementations>
-          <git>jgit</git>
-        </providerImplementations>
-      </configuration>
-    </plugin>     
-     
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-release-plugin</artifactId>
+  <version>3.0.1</version>
+  <configuration>
+    <tagNameFormat>v@{project.version}</tagNameFormat>
+    <autoVersionSubmodules>true</autoVersionSubmodules>
+    <pushChanges>true</pushChanges>
+    <preparationGoals>clean verify</preparationGoals>
+    <arguments>-Dmaven.test.skip=true</arguments>
+    <providerImplementations>
+      <git>jgit</git>
+    </providerImplementations>
+  </configuration>
+</plugin>
+
     <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-release-plugin</artifactId>
@@ -220,7 +221,7 @@
     <tagNameFormat>v@{project.version}</tagNameFormat>
     <pushChanges>false</pushChanges> <!-- Set to true after testing -->
   </configuration>
-</plugin> 
+</plugin>     
 
        <plugin>
         <groupId>io.spring.javaformat</groupId>
