--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic</artifactId>
-  <version>4.0.2</version>
+  <version>4.0.3-SNAPSHOT</version>
   <name>petclinic</name>
 
   <properties>
@@ -22,7 +22,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- Important for reproducible builds. Update using e.g. ./mvnw versions:set
         -DnewVersion=... -->
-    <project.build.outputTimestamp>2025-04-07T08:46:38Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-04-07T08:46:42Z</project.build.outputTimestamp>
 
     <!-- Web dependencies -->
     <webjars-locator.version>1.0.1</webjars-locator.version>
@@ -43,7 +43,7 @@
     <connection>scm:git:git@github.com:skumargrid/spring-petclinic.git</connection>
     <developerConnection>scm:git:git@github.com:skumargrid/spring-petclinic.git</developerConnection>
     <url>https://github.com/skumargrid/spring-petclinic</url>
-    <tag>v4.0.2</tag>
+    <tag>v4.0.0</tag>
 </scm>
 
   <dependencies>
